fixed file upload box getting too wide, file link issues, and message XSS vulnerabilities

--- a/html/css/global/img.css
+++ b/html/css/global/img.css
@@ -244,3 +244,7 @@ div.file-deleted-box {
 	margin:4px 8px;
 	border-width: 2px;
 }
+
+input[type=file] {
+	max-width: 275px;
+}
